<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:background="@drawable/backhome2"
    tools:context="com.log2n.rentafurniture.SignUpActivity">

    <LinearLayout
        android:layout_centerVertical="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="205dp"
            android:src="@drawable/dark_fur"
            android:background="@drawable/layout_border"
            />

        <EditText
            android:id="@+id/editTextEmailLogIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:hint="@string/enter_email"
            android:inputType="textWebEmailAddress"
            />

        <EditText
            android:id="@+id/editTextPasswordLogIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:hint="@string/enter_password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/angry_btn2"

            android:text="@string/log_in_button"
            android:textColor="#FFFFFF"
            android:textSize="15sp"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonshape"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:layout_margin="15dp"/>

        <TextView
            android:id="@+id/linkSignUp"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_margin="15dp"
            android:text="@string/singup_link_text"
            android:textAlignment="center"
            android:textSize="18sp"/>

    </LinearLayout>



</RelativeLayout>