<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:background="@drawable/backhome2"
    tools:context="com.log2n.rentafurniture.SignUpActivity">


    <LinearLayout
        android:layout_centerVertical="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:src="@drawable/dark_fur"
            android:background="@drawable/layout_border"
            />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/layout_border">

                <EditText
                    android:id="@+id/editTextEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:hint="@string/enter_email"
                    android:inputType="textEmailAddress"
                    />

                <EditText
                    android:id="@+id/editTextFullname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:hint="Enter Your Full Name"
                    android:inputType="textPersonName"
                    />

                <EditText
                    android:id="@+id/editTextAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:hint="Enter Your Full Address"
                    android:inputType="textPostalAddress"
                     />

                <EditText
                    android:id="@+id/editTextContact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:hint="Enter Your Contact Number"
                    android:inputType="phone"
                     />

                <EditText
                    android:id="@+id/editTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:hint="@string/enter_password"
                    android:inputType="textPassword" />

                <EditText
                    android:id="@+id/ConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:hint="@string/Password_confirmation"
                    android:inputType="textPassword" />

                <Button
                    android:id="@+id/angry_btn"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"

                    android:background="@drawable/buttonshape"
                    android:shadowColor="#A8A8A8"
                    android:shadowDx="0"
                    android:shadowDy="0"
                    android:shadowRadius="5"
                    android:text="@string/sign_up_button"
                    android:textColor="#FFFFFF"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/linkSignIn"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_margin="15dp"
                    android:text="@string/singin_link_text"
                    android:textAlignment="center"
                    android:textSize="18sp" />

            </LinearLayout>
        </ScrollView>

    </LinearLayout>



</RelativeLayout>